[tool.poetry]
name = "inertia-estimation"
version = "0.1.0"
description = "Ambient-based inertia estimation using frequency and power deviations."
authors = [
    "Jiangkai Peng",
    "Jin Tan <jin.tan@nrel.gov>"
]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "^1.5.2"
numpy = "^1.26.4"
matplotlib = "^3.6.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

