[tool.poetry]
name = "Inertia_Estimation"
version = "0.1.0"
description = "Ambient-based inertia estimation using frequency and power deviations."
authors = [
    "Jiangkai Peng",
    "Jin Tan <jin.tan@nrel.gov>"
]
packages = [{ include = "Inertia_Estimation", from = "src" }]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
pandas = "^1.5.2"
numpy = "^1.26.4"
matplotlib = "^3.6.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

